--- a/site/content/quicktips/2018-03-15Docker.md
+++ b/site/content/quicktips/2018-03-15Docker.md
@@ -18,7 +18,7 @@ Containers are not a new idea in the programing world, but when I first encounte
 ## Some Context
 My first steps using <a href="https://www.docker.com" target="_blank">Docker</a> had me feeling like I was writing something similar to the <a href=“https://en.wikipedia.org/wiki/Pseudocode” target="_blank">pseudo code</a> I sometimes use to hash out ideas. Wich is kind of cool because that means it felt familiar, inviting, unintimidating even. But pseudo code can also kind of feel abstract if you're not sure what's happening under the hood. I quickly realised that I needed a refresher in all things networking to really be able to use Docker to it’s full potential. This is especially true if you’re using Docker on a Mac.
 
-Docker plays most friendly with Linux systems because it was conceived for linux systems first and foremost, and requires a virtual machine (vm) to run on a Mac (which feels pretty ironic conisdering once of the main arguments for Docker being so great is that it's so much lighter and faster than a vm... but anyways...) So when you install <a href="https://docs.docker.com/docker-for-mac/" target="_blank">docker-for-mac</a> on your system keep in mind that any `ports` you expose in your `Dockerfile` will have to be pointed to ports outside the vm in order to render anything into the browser. Hold on to that thought, because we’ll come back to it in a minute.
+Docker plays most friendly with Linux systems because it was conceived for linux systems first and foremost, and requires a virtual machine (vm) to run on a Mac (which feels pretty ironic conisdering once of the main arguments for Docker being so great is that it's so much lighter and faster than a vm... but anyways...) So when you install <a href="https://docs.docker.com/docker-for-mac/" target="_blank">docker-for-mac</a> on your system keep in mind that any `ports` you expose in your `Dockerfile` will have to be mapped to ports outside the vm in order to render anything into the browser. Hold on to that thought, because we’ll come back to it in a minute.
 
 ### Images
 
@@ -52,7 +52,7 @@ CMD /entrypoint.sh
 yarn
 gatsby develop --host 0.0.0.0 --port 8888
 ```
-#### N.B. - This image is for a development workflow, so I created a bash file to be able to run yarn dynamically when I start up my docker container. When the image is production ready, this step wouldn't be needed.
+#### N.B. - This image is for a development workflow, so I created a bash file to be able to run yarn dynamically when I start up my docker container. This is so that Gatsby doesn’t run until all the files are on the file system via the bind mount, which I'll explain in a second. But just keep in mind that when the image is production ready, this step wouldn't be needed. 
 
 ### Containers:
 
@@ -62,7 +62,9 @@ Above I showed you how to create an `image` based on local project files. In my 
 
 ### Volumes
 
-Enter `volumes`, which are directories specifically designed to allow your changes to be taken into account by the container (or say, if you needed some data to persist through any future containers you might start/stop, but we’ll come back to this…)
+Enter `volumes`, which are directories specifically designed to allow your changes to be taken into account by the container (or say, if you needed some data to persist through any future containers you might start/stop, but we’ll come back to this…) 
+
+There are two types of volumes - bind mounts, Docker's anonymous volumes, and named mounts, Docker volumes that you create manually and assign yourself. In the case of my Gatsby project, we'll use a bind mount to run things from the command line.
 
 ## Piecing it all together:
 
@@ -82,8 +84,8 @@ docker run -d --name gatsbystory -p 8888:8888  -v $(pwd)/gatsby:/var/www/html  g
 
 - - `-d` is a tag that gets things running in the background so you can still work in your terminal
 - - We're `--name`-ing the container __gatsbystory__ 
-- - The `-p` tag forwards the `port` defined on the right to the one on the left, which kind of feels backwards, right? But __HOST_PORT:CLIENT_PORT__. In this case they're both the same but IRL you can change the port on the left to whatever you want. The command basically makes whatever is running on __port 8888__ (the port that u exposed in your initial Docker image, remember) accessible by __localhost:8888__ in the browser. On a linux machine you wouldn’t need to explicitly tell docker where to look. This is entirely because of how Docker works from within a vm on a Mac.
-- - `-v` attaches an anonymous `volume` to your local project folder (in this case, __gatsby__) and sends any changes made to that folder to the destination path on the server being run in your docker instance.
+- - The `-p` tag maps the `port` defined on the right to the one on the left, which kind of feels backwards, right? But __HOST_PORT:CONTAINER_PORT__. In this case they're both the same but IRL you can change the port on the left to whatever you want. The command basically makes whatever is running on __port 8888__ (the port that u exposed in your initial Docker image, remember) accessible by __localhost:8888__ in the browser. On a linux machine you wouldn’t need to explicitly tell docker where to look. This is entirely because of how Docker works from within a vm on a Mac.
+- - `-v` attaches an anonymous `volume` to your local project folder (in this case, __gatsby__) and sends any changes made to that folder to the destination path on the server being run in your docker instance... well, sort of. Actually, from the pov of the kernel,  the bind mount is the same bunch of files - so it's sort of like being in <a hre="https://www.youtube.com/watch?v=OMlYpH1lOYg">two places at once</a>. (Yes I did just make that reference. #2000s)
 
 When you run this command, you'll have a working instance, and thanks to the volume you set up, any changes you make while developing will be taken into account directly in the browser. Great! 
 
@@ -91,11 +93,10 @@ But if each service goes into a seperate container... how do you make containers
 
 ## Docker-compose
 
-Docker really clicked for me when I started using <a href="https://docs.docker.com/compose/overview/" target="_blank">docker-compose</a>, which is basically like a Dockerfile that sits on top of a bunch of Dockerfiles (or rather, the images they describe...) telling them how to play nice with each other.
-
+Docker really clicked for me when I started using <a href="https://docs.docker.com/compose/overview/" target="_blank">docker-compose</a>, which feels like a Dockerfile that sits on top of a bunch of Dockerfiles (or rather, the images they describe...) telling them how to play nice with each other. (The more technical way of saying this would be that Docker runs at build time, whereas Docker-compose runs at run time.) 
 In our case the local Gatsby project already has it's image. Instead of writing two more images, I'm going to pull some pre-made ones from <a href="https://hub.docker.com/" target="_blank">docker hub</a> for the cms and database I want to hook up to my project. (__Hint:__ official project images > random user uploaded images, as they are most trustworthy.) 
 
-We could tediously run each image from the terminal using commands similar to the one outlined above, but docker-compose exists so that we don't have to. Instead we can create a `docker-compose.yaml` file in the same place as your initial Gatsbyjs Docker file, to get things running from a single source. All that's left to do after that is run 
+We could tediously run each image from the terminal using commands similar to the one outlined above, but docker-compose exists so that we don't have to. Instead we can create a `docker-compose.yml` file in the same place as your initial Gatsbyjs Docker file, to get things running from a single source. All that's left to do after that is run 
 
 ```JSON
 docker-compose up
@@ -107,11 +108,11 @@ In this example we’ll be hooking up an image of a gatsby project, with a cms c
 First thing, set your `version` of docker compose (I'm using __v 3__)
 
 ```javascript
-//docker-compose.yaml
+//docker-compose.yml
 version: '3'
 ```
 Next, list out the various `services` that you’ll be using. Services are run via images. So each service runs an image that creates a container. I named them `db`, `cms` and `web` but you can call your services whatever you want. Since my Gatsbyjs project is running from a local development image, and our docker-compose.yml file is in the same location, I include `build .` instead of pointing to a pre-made image.
-Don't forget to define the ports you want to expose so things load properly in the browser. 
+Don't forget to define the ports you want to map so things load properly in the browser. 
 
 __N.B since we aren't accessing the datbase directly, but instead via our cms, that particular port with be set later on, using cockpits environment varialbes.__ 
 
@@ -169,7 +170,7 @@ volume list
 then add it to your `docker-compose.yml`
 
 ```javascript
-//docker-compose.yaml
+//docker-compose.yml
 version: '3'
 services:
   db:
@@ -192,7 +193,7 @@ volumes:
 Within each service (__db__, __cms__, __web__) add the network they will be communicating through.
 
 ```javascript
-//docker-compose.yaml
+//docker-compose.yml
 version: '3'
 services:
   db:
@@ -221,7 +222,7 @@ volumes:
 In your __db service__, connect the volume you created to the database path (this set up info is usually explained on docker hub, so it can be different if you’re using a different image, but this is how it works with Cockpit.)
 
 ```javascript
-//docker-compose.yaml
+//docker-compose.yml
 version: '3'
 services:
   db:
@@ -252,7 +253,7 @@ volumes:
 Netxt, configure the environment variables of the service that is dependant on the database (our cms, cockpit) and point it to the database (again, these details should be specified on docker hub or in the docs… in the case of cockpit, a bit of digging needed to be done. Hat tip to <a href="https://twitter.com/_superseed" target="_blank">@superspeed</a>, who helped me find this info, and who also repeatedly hashed out Docker's more confusing parts with me 🙏🙏.) As mentioned earlier, this is where you'll the cms to the database server, in this case the __COCKPIT_DATABASE_SERVER__
 
 ```javascript
-//docker-compose.yaml
+//docker-compose.yml
 version: '3'
 services:
   db:
@@ -287,7 +288,7 @@ volumes:
   mongo-vol: null
 ```
 
-__Tip:__ Send your yaml file through a linter and save yourself some weird error messages. Once you're cleared, you're good to go! Run 
+__Tip:__ Send your .yml file through a linter and save yourself some weird error messages. Once you're cleared, you're good to go! Run 
 
 ```JSON
 docker-compose up
@@ -307,10 +308,12 @@ docker-compose up
 - - __Docker volume list__ (list out volumes)
 
 #### Exposing ports
-As I said above, on a mac, Docker needs to reach outside it's vm so that when your containers run their various servers, the urls can be redirected to the exposed ports. Here's how it works under the hood on a mac, and how the VM on your mac works with docker.
+As I said above, on a mac, Docker needs to reach outside it's vm so that when your containers run their various servers, the urls can be redirected to the exposed ports. Here's how it works under the hood on a mac, and how the VM on your mac works with Docker.
 
 ##### Docker for Mac
 <img src="/images/DockerMac.png">
 
 #### Linux Virtual Machine
 <img src="/images/DockerLinux.png">
+
+Containers can be represented as boxes that interface with the 'outside' via ports. These interfaces each have IP addresses, and the containers open ports for the apps inside to access the outside. Containers can be bridged together, and the docker daemon maps those open container ports to the outside world, the 'real ports' illustrated in the first diagram. This makes the containers accessible through localhost (or the host’s IP address) instead of just the container IP/port.
