update docker links

--- a/site/content/quicktips/2018-03-15Docker.md
+++ b/site/content/quicktips/2018-03-15Docker.md
@@ -106,7 +106,7 @@ When you run this command, you'll have a working instance, and thanks to the mou
 ## Next Steps...
 But if each service goes into a seperate container... how do you make containers work together? How would I hook up my Gatsbyjs project to a backoffice cms, (which requires a database,) and how would I funnel the data into my Gatsby project? 
 
-Thankfully, Docker provides a handy tool in the way of docker-compose, to help us link together any containers we want - which I explain in <a href="https://docs.docker.com/compose/overview/" target="_blank">Docker (pt2)</a> 👈.
+Thankfully, Docker provides a handy tool in the way of docker-compose, to help us link together any containers we want - which I explain in <a href="https://www.unicornsfartpixels.com/quicktips/2018-03-15docker-compose/" target="_blank">Docker (pt2)</a> 👈.
 
 
 
