--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -8,13 +8,13 @@ type = "posts"
 
 If you’re interested in textures or are curious about how you might digitally render out something that looks more organic than it does, well, digital, Shaders might be for you. That’s what got me interested anyways, in taking on the notoriously complex language. 
 
-If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes  noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. You can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
+If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes  noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. One of my personal favorites is also this <a href="http://apps.amandaghassaei.com/FluidSimulation/" target="_blank">fluid sim</a> by Amanda Ghassaei. As you can see, you can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
 
 #### N.B This is part one of a series on getting started with Shaders in Three.js and will specifically cover how to create an environment that renders out a base texture onto which you can apply a shader (coming soon) aka rendering to a texture.
 
 ## A little background
 
-Less like JS, more like C, Shaders are written in <a href="https://www.khronos.org/opengl/wiki/OpenGL_Shading_Language" target="_blank">openGL Shading Language</a> (GLSL) and depend on parallel processing to run. Which basically just means lots of teeny tiny microprocessors all running at the same time (via the GPU) - as contrasted by serial processing, which does things pedantically, one after the other, allocating more processing time to bigger (heavier) tasks than others (via the CPU). Until now, any visuals you’ve been making have likely been relying on the CPU. Not Shaders! Which is why they are so powerful. The best analogy I’ve ever seen for this can be found <a href="https://www.youtube.com/watch?v=WmW6SD-EHVY" target="_blank">here</a>. Hint: Mona Lisa + jumbo paint gun — well worth the click, I promise.
+Less like JS, more like C, Shaders are written in <a href="https://www.khronos.org/opengl/wiki/OpenGL_Shading_Language" target="_blank">openGL Shading Language</a> (GLSL) and depend on parallel processing to run. Which basically just means lots of teeny tiny microprocessors all running at the same time (via the GPU) - as contrasted by serial processing, which does things pedantically, one after the other, allocating more processing time to bigger (heavier) tasks than others (via the CPU). Until now, any visuals you’ve made have likely been relying on the CPU. Not Shaders! Which is why they are so powerful. The best analogy I’ve ever seen for this can be found <a href="https://www.youtube.com/watch?v=WmW6SD-EHVY" target="_blank">here</a>. Hint: Mona Lisa + jumbo paint gun — well worth the click, I promise.
 
 ## Base Setup & Tooling
 
@@ -22,7 +22,7 @@ My go-to for getting up and running quickly with Three.js has been <a href="http
 
 ## Rendering to a texture
 
-In Threejs you have materials (which are basically 3D shapes), to which you can apply textures (which are basically like skins), “inside” which you can store a shader (which is basically …like skin pigment? I guess?), which you can then display on the screen.
+In Threejs you have materials (which are basically 3D shapes... actually I'm almost sure this is technically-speaking quite incorrect, materials are not the shapes/forms themselves, but materials are used in such a way that they feel like shapes to me, since:) to which you can apply textures (which are basically like skins), “inside” which you can store a shader (which is basically …like skin pigment? I guess?), which you can then display on the screen.
 
 There are of course some other important concepts to understand about shaders, and we’ll get to them in future posts. For now, you’ve got all the info needed to navigate this initial base-setup step.
 
@@ -30,7 +30,7 @@ There are of course some other important concepts to understand about shaders, a
 
 ### Use an Orthographic Camera.
 
-Right off the bat, we'll be swapping out the default __Perspective Camera__ for an __Orthographic__ one. The __Perspective Camera__, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic, which you might think we'd want since we're aiming for a _not so digital_ feel. But it can actually prove problematic with shaders re: scaling since the distance between the rendered image and the Threejs camera isn’t necessarily constant. The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is. 
+Right off the bat, we'll be swapping out the default __Perspective Camera__ for an __Orthographic__ one. The __Perspective Camera__, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic - which you'd think we'd want since we're aiming for a _not so digital_ feel. But it can actually prove problematic with shaders re: scaling since the distance between the rendered image and the Threejs camera isn’t necessarily constant. (The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is.) 
 
 ```javascript
 /* Init renderer and canvas */
@@ -51,7 +51,7 @@ const camera = new OrthographicCamera(-w / 2, w / 2, h / 2, -h / 2, 0.1, 1000);
 camera.position.set(0, 0, 150);
 ```
 
-The __Orthographic Camera__ fixes these issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>. 
+The __Orthographic Camera__ fixes any issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>. 
 
 ## Set a render target
 
@@ -139,7 +139,7 @@ One new thing to note: we need to add the `mesh` (aka our repeatedly rendered ob
 
 ## A scene within a scene
 
-We're almost finished getting our scene set up to play nice with Shaders! To connect all the dots and get our render target working, we have to place our initial scene (the grid of imported 3D objects) inside some sort of container, which we will render out into a(nother) Threejs scene.
+We're almost finished getting our scene set up to play nice with shaders! To connect all the dots and get our render target working, we have to place our initial scene (the grid of imported 3D objects) inside some sort of container, which we will render out into a(nother) Threejs scene.
 
 So a scene within a scene... (kind of like <a href="https://www.youtube.com/watch?v=TAbbJT0ZXmk" target="_blank">inception</a> 🤔)
 
@@ -183,6 +183,12 @@ cube.rotation.x += 0.01;
 cube.rotation.y += 0.05;
 ```
 
-And now you have a working render target \o/! Your Three.js project is officially primed and ready for some shaders, which we'll get to in the next post. I'll go over how to create a custom shader using two different code implementation methods. 
+Congrats, you offically have a working render target \o/! When you hit `npm start` you should now see a slightly underwelming spinning cube in your browser. (If not, grab the full code <a href="https://github.com/elizasj/shaders/blob/master/_1_renderTarget/src/index.js" target="_blank">here</a> to debug.) But look a little closer and you'll see that your spinning cube contains a grid of 3D objects. 
+
+<img src="/images/shader.gif">
+
+This is exciting. This means you're scene within a scene is working - you're render target has been set. Your Three.js project is  primed and ready for some shaders, which we'll get to in the next post. 
+
+__Coming up:__ I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!) 
 
 Stay tuned!
