fix broken links

--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -18,7 +18,7 @@ Less like JS, more like C, Shaders are written in <a href="https://www.khronos.o
 
 ## Base Setup & Tooling
 
-My go-to for getting up and running quickly with Three.js has been <a href="https://www.unicornsfartpixels.com/%E2%80%9Chttps://www.npmjs.com/package/budo%E2%80%9D" target="_blank">Budo</a>, a great little zero config browserify development server from <a href="https://twitter.com/mattdesl" target="_blank">Matt DesLauriers</a> that has live reloading integration right out of the box. As I mentioned in a previous <a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank">post</a> I created my own little <a href=“https://github.com/elizasj/fftthree/blob/master/src/index.js” target="_blank">boilerplate</a>, largely inspired by <a href="https://github.com/superguigui">SuperGuiGui’s</a>. This tutorial will build off of my boilerplate, so feel free to use it. It also happens to come with everything you need to get rolling with audio visualisation in Threejs, which might come in handy in parts three/four of this Shaders series (_hint, hint_.)
+My go-to for getting up and running quickly with Three.js has been <a href="https://www.unicornsfartpixels.com/%E2%80%9Chttps://www.npmjs.com/package/budo%E2%80%9D" target="_blank">Budo</a>, a great little zero config browserify development server from <a href="https://twitter.com/mattdesl" target="_blank">Matt DesLauriers</a> that has live reloading integration right out of the box. As I mentioned in a previous <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_blank">post</a> I created my own little <a href="https://github.com/elizasj/fftthree/blob/master/src/index.js" target="_blank">boilerplate</a>, largely inspired by <a href="https://github.com/superguigui">SuperGuiGui’s</a>. This tutorial will build off of my boilerplate, so feel free to use it. It also happens to come with everything you need to get rolling with audio visualisation in Threejs, which might come in handy in parts three/four of this Shaders series (_hint, hint_.)
 
 ## Rendering to a texture
 
@@ -82,7 +82,7 @@ If you’re using my boilerplate you’ll notice that __group__ replaces __parti
 
 ## Add mesh to group in the object grid
 
-This part is pretty straight forward, especially if you followed along in my past <a href="<a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank"">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces. 
+This part is pretty straight forward, especially if you followed along in my past <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_blank">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces. 
 
 ```javascript
 /* Content of scene */
