--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -6,9 +6,9 @@ draft = false
 type = "posts"
 +++
 
-If you’re interested in textures or are curious about how you might digitally render out something that looks more organic than it does, well, digital, Shaders might be for you. That’s what got me interested anyways, in taking on the notoriously complex language. 
+If you’re interested in textures or are curious about how you might digitally render out something that looks more organic than it does, well, digital, shaders might be for you. That’s what got me interested anyways, in taking on the notoriously complex language.
 
-If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes  noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. One of my personal favorites is also this <a href="http://apps.amandaghassaei.com/FluidSimulation/" target="_blank">fluid sim</a> by Amanda Ghassaei. As you can see, you can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
+If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. One of my personal favorites is also this <a href="http://apps.amandaghassaei.com/FluidSimulation/" target="_blank">fluid sim</a> by Amanda Ghassaei. As you can see, you can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
 
 #### N.B This is part one of a series on getting started with Shaders in Three.js and will specifically cover how to create an environment that renders out a base texture onto which you can apply a shader (coming soon) aka rendering to a texture.
 
@@ -30,7 +30,7 @@ There are of course some other important concepts to understand about shaders, a
 
 ### Use an Orthographic Camera.
 
-Right off the bat, we'll be swapping out the default __Perspective Camera__ for an __Orthographic__ one. The __Perspective Camera__, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic - which you'd think we'd want since we're aiming for a _not so digital_ feel. But it can actually prove problematic with shaders re: scaling since the distance between the rendered image and the Threejs camera isn’t necessarily constant. (The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is.) 
+Right off the bat, we'll be swapping out the default **Perspective Camera** for an **Orthographic** one. The **Perspective Camera**, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic - which you'd think we'd want since we're aiming for a _not so digital_ feel. But it can actually prove problematic with shaders re: scaling since the distance between the rendered image and the Threejs camera isn’t necessarily constant. (The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is.)
 
 ```javascript
 /* Init renderer and canvas */
@@ -51,7 +51,7 @@ const camera = new OrthographicCamera(-w / 2, w / 2, h / 2, -h / 2, 0.1, 1000);
 camera.position.set(0, 0, 150);
 ```
 
-The __Orthographic Camera__ fixes any issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>. 
+The **Orthographic Camera** fixes any issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>.
 
 ## Set a render target
 
@@ -78,11 +78,11 @@ const group = new Group();
 scene.add(group);
 ```
 
-If you’re using my boilerplate you’ll notice that __group__ replaces __particles__ which means we swap out the `Object3D()` base object class for it’s cousin `Group()`. To be honest, I don’t know that there’s a huge difference between either of these classes other than the added clarity of the word Group. From what I can tell, the `Group()` class is also handy for manually grouping things together, and you can have multiple `Object3D` groups within an instance of the `Group()` class, which we don't particularily need right now, but may eventually. If anyone has any other info/opinion on why using `Group()` is/isn't better, <a href="https://twitter.com/iamelizasj" target="_blank">ping me</a> on twitter, I'd be curious to know.
+If you’re using my boilerplate you’ll notice that **group** replaces **particles** which means we swap out the `Object3D()` base object class for it’s cousin `Group()`. To be honest, I don’t know that there’s a huge difference between either of these classes other than the added clarity of the word Group. From what I can tell, the `Group()` class is also handy for manually grouping things together, and you can have multiple `Object3D` groups within an instance of the `Group()` class, which we don't particularily need right now, but may eventually. If anyone has any other info/opinion on why using `Group()` is/isn't better, <a href="https://twitter.com/iamelizasj" target="_blank">ping me</a> on twitter, I'd be curious to know.
 
 ## Add mesh to group in the object grid
 
-This part is pretty straight forward, especially if you followed along in my past <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_blank">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces. 
+This part is pretty straight forward, especially if you followed along in my past <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_blank">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces.
 
 ```javascript
 /* Content of scene */
@@ -135,6 +135,7 @@ function addObj(mesh) {
     }
   }
 ```
+
 One new thing to note: we need to add the `mesh` (aka our repeatedly rendered object) created within the grid to our `group` instance.
 
 ## A scene within a scene
@@ -156,6 +157,7 @@ So a scene within a scene... (kind of like <a href="https://www.youtube.com/watc
     engine.start();
 }
 ```
+
 This bit of code is found within the `addObj` function where we created our grid of objects. For the inception bit to work, we create a `BoxGemetry` & it’s material, which will contain our grid, onto which we'll render our texture (which if you remember, will store our shader data…)
 
 Next we just need to create a container for the 3D object in the global space. This container will encase our grid of objects. Inception complete!
@@ -163,7 +165,9 @@ Next we just need to create a container for the 3D object in the global space. T
 ```javascript
 var cube;
 ```
+
 ## Rendering it out
+
 Might be nice to actually see all this in action, right? We'll manage our scenes from inside the render function, first setting the `cube` to invisible and the `group` visible, and rendering out the `scene`, `camera` and `renderTarget`.
 
 Then, just underneath, we'll flip things around and set the `cube` to visible and the `group` invisible. This time we' render out just the `scene` and `camera`.
@@ -183,12 +187,12 @@ cube.rotation.x += 0.01;
 cube.rotation.y += 0.05;
 ```
 
-Congrats, you offically have a working render target \o/! When you hit `npm start` you should now see a slightly underwelming spinning cube in your browser. (If not, grab the full code <a href="https://github.com/elizasj/shaders/blob/master/_1_renderTarget/src/index.js" target="_blank">here</a> to debug.) But look a little closer and you'll see that your spinning cube contains a grid of 3D objects. 
+Congrats, you offically have a working render target \o/! When you hit `npm start` you should now see a slightly underwelming spinning cube in your browser. (If not, grab the full code <a href="https://github.com/elizasj/shaders/blob/master/_1_renderTarget/src/index.js" target="_blank">here</a> to debug.) But look a little closer and you'll see that your spinning cube contains a grid of 3D objects.
 
 <img src="/images/shader.gif">
 
-This is exciting. This means you're scene within a scene is working - you're render target has been set. Your Three.js project is  primed and ready for some shaders, which we'll get to in the next post. 
+This is exciting. This means you're scene within a scene is working - you're render target has been set. Your Three.js project is primed and ready for some shaders, which we'll get to in the next post.
 
-__Coming up:__ I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!) 
+**Coming up:** I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!)
 
 Stay tuned!
