--- a/site/content/quicktips/2018-01-05mapvsmap.md
+++ b/site/content/quicktips/2018-01-05mapvsmap.md
@@ -1,6 +1,6 @@
 +++
 date = "2018-03-01T00:00:00Z"
-tags = ["quicktips, basics"]
+tags = ["quicktips", "basics"]
 title = ".map() vs p5.js map()"
 draft = false
 type = "quicktips"
