--- a/site/content/quicktips/2018-03-15cors.md
+++ b/site/content/quicktips/2018-03-15cors.md
@@ -1,14 +1,14 @@
 +++
 date = "2018-03-15T00:00:00Z"
-tags = ["quicktips, api, data"]
+tags = ["quicktips", "api", "data"]
 title = "CORS"
 draft = false
 type = "quicktips"
 +++
 
-**CORS** stands for **C**ross **O**rigin **R**equest **S**haring - it's a <a href="https://www.w3.org/TR/cors/" target="_blank">w3c standard</a> that gives access to resources across web domains. So basically if you've ever made an API call, you've likely encountered __CORS__. 
+**CORS** stands for **C**ross **O**rigin **R**equest **S**haring - it's a <a href="https://www.w3.org/TR/cors/" target="_blank">w3c standard</a> that gives access to resources across web domains. So basically if you've ever made an API call, you've likely encountered **CORS**.
 
-__CORS__ exists because of the <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy" target="_blank">same-origin-policy</a> - a rule that states that HTTP requests made from one domain can only access endpoints on that same domain. 
+**CORS** exists because of the <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy" target="_blank">same-origin-policy</a> - a rule that states that HTTP requests made from one domain can only access endpoints on that same domain.
 
 When using `fetch()` or axios, or whatever your prefered API requesting habits may have you reaching for, (though `fetch()` is suppose to be the standard accross all browsers ~~soon~~ one day...) to access a URL that has a different origin than where you're requesting from, **CORS** needs to be explicitly enabled on the “different origin” side of things, aka the place you're making a request _to_ (an API).
 
@@ -28,15 +28,15 @@ There are actually a surprising amount of web sites with such _not-so-public_ AP
 
 Not ideal.
 
-Of course, if the API is your own you can go ahead and set the proper __CORS__ response on the server that you’re making the call to. Express has a really easy to implement <a href="https://www.npmjs.com/package/cors" target="_blank">**CORS** package</a>, for example.
+Of course, if the API is your own you can go ahead and set the proper **CORS** response on the server that you’re making the call to. Express has a really easy to implement <a href="https://www.npmjs.com/package/cors" target="_blank">**CORS** package</a>, for example.
 
 ## Solution
 
-Otherwise, for when you're dealing with an API that you have no jurisdiction over there exists a bit of a hacky work-around to get you past that pesky __CORS__ error. 
+Otherwise, for when you're dealing with an API that you have no jurisdiction over there exists a bit of a hacky work-around to get you past that pesky **CORS** error.
 
-Assuming that the API in question allows access from 3rd-party apps, that you're not missing a token in your request, and that the API isn't restricted to server-side applications only, __you can write a proxy that will act as a go-between for the browser and the API__.
+Assuming that the API in question allows access from 3rd-party apps, that you're not missing a token in your request, and that the API isn't restricted to server-side applications only, **you can write a proxy that will act as a go-between for the browser and the API**.
 
-The proxy doesn't have to be on the same domain as your site/app/whatever, as long as the proxy itself properly supports **CORS** when communicating with the client. 
+The proxy doesn't have to be on the same domain as your site/app/whatever, as long as the proxy itself properly supports **CORS** when communicating with the client.
 
 You can either write your own, or use a ready made proxy like the very handy <a href="https://www.npmjs.com/package/cors-anywhere" target="_blank">cors-anywhere</a>, implimented like so:
 
@@ -56,4 +56,3 @@ fetch(proxyUrl + targetUrl)
     return e;
   });
 ```
-
