--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -1,6 +1,6 @@
 +++
 date = "2018-03-15T00:00:00Z"
-tags = ["shaders"]
+tags = ["shaders", "threejs"]
 title = "Intro to Shaders (in Three.js)"
 draft = false
 type = "posts"
@@ -51,7 +51,7 @@ const camera = new OrthographicCamera(-w / 2, w / 2, h / 2, -h / 2, 0.1, 1000);
 camera.position.set(0, 0, 150);
 ```
 
-The **Orthographic Camera** fixes any issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>.
+The **Orthographic Camera** fixes any issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>, or (thinking back even further,) to <a href="https://www.youtube.com/watch?v=_enw8gnHNX4" target="_blank">Renaissance art</a>. Of course, artists of the time didn't have a camera persay, but they did use a technique called foreshortening, which is the same effect that the Orthographic Camera produces.
 
 ## Set a render target
 
@@ -193,6 +193,6 @@ Congrats, you offically have a working render target \o/! When you hit `npm star
 
 This is exciting. This means you're scene within a scene is working - you're render target has been set. Your Three.js project is primed and ready for some shaders, which we'll get to in the next post.
 
-**Coming up:** I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!)
+__Coming up in Part Two__: I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!)
 
 Stay tuned!
