--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -10,7 +10,7 @@ If you’re interested in textures or are curious about how you might digitally 
 
 If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. One of my personal favorites is also this <a href="http://apps.amandaghassaei.com/FluidSimulation/" target="_blank">fluid sim</a> by Amanda Ghassaei. As you can see, you can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
 
-#### N.B This is part one of a series on getting started with Shaders in Three.js and will specifically cover how to create an environment that renders out a base texture onto which you can apply a shader (coming soon) aka rendering to a texture.
+#### N.B This is Part One of a series on getting started with Shaders in Three.js and will specifically cover how to create an environment that renders out a base texture onto which you can apply a shader (coming up in <a href="https://www.unicornsfartpixels.com/posts/2018-04-01shaders-pt2/" target="_blank">Part Two</a>)aka rendering to a texture.
 
 ## A little background
 
@@ -193,6 +193,6 @@ Congrats, you offically have a working render target \o/! When you hit `npm star
 
 This is exciting. This means you're scene within a scene is working - you're render target has been set. Your Three.js project is primed and ready for some shaders, which we'll get to in the next post.
 
-__Coming up in Part Two__: I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!)
+__Coming up in <a href="https://www.unicornsfartpixels.com/posts/2018-04-01shaders-pt2/" target="_blank">Part Two</a>__: I'll go over how to create a custom shader using two different code implementation methods - first the OG way, right inside the index.html file. And then I'll explain how to get shaders set up as independant files (readability ftw!)
 
 Stay tuned!
