--- a/site/content/posts/2018-01-01fftthree.md
+++ b/site/content/posts/2018-01-01fftthree.md
@@ -1,7 +1,7 @@
 +++
 date = "2018-01-01T00:00:00Z"
 tags = ["threejs", "data", "dataviz", "audio"]
-title = "Visualizing Sound (pt2): Three.js"
+title = "Visualising Sound (pt2): Three.js"
 type = "posts"
 draft = false
 +++
