--- a/site/content/posts/2018-04-01Shaders-pt2.md
+++ b/site/content/posts/2018-04-01Shaders-pt2.md
@@ -254,7 +254,7 @@ module.exports = (env = {}) => {
 };
 ```
 
-Ok, so you should now have a multicolor custom shader cascading across your computer screen, yay! (As per usual, if you're getting errors, feel free to compare and contrast with my code.) Now that you're familiar with some of the basics of shader concepts and language, you're ready to do things like animate, add interactive elements and integrate 3D objects.
+Ok, so you should now have a multicolor custom shader cascading across your computer screen, yay! (As per usual, if you're getting errors, feel free to compare and contrast with my <a href="https://github.com/elizasj/shaders/tree/master/_2_customShader/_webpack" targer="_blank">code</a>.) Now that you're familiar with some of the basics of shader concepts and language, you're ready to do things like animate, add interactive elements and integrate 3D objects.
 
 __Coming up in Part Three__: I’ll go over some of the more commonly used vocabulary when creating with shaders, how to use the render target we created in <a href="https://www.unicornsfartpixels.com/posts/2018-03-15shaders-pt1/" target="_blank">Part One</a> with our new custom shader, and I'll also explain how to use time and data (uniforms) to power shader animations. 
 
