--- a/site/content/posts/2018-05-10Shaders-pt3.md
+++ b/site/content/posts/2018-05-10Shaders-pt3.md
@@ -232,7 +232,7 @@ If you've been following along you should see something like this in your browse
 
 <img src="/images/shaders.gif">
 
-As always, if your code is bugging, feel free to compare and contrast with <a href="#" target="_blank">my code</a>. We've covered a lot of ground, and yet... this is really just the beginning! 
+As always, if your code is bugging, feel free to compare and contrast with <a href="https://github.com/elizasj/shaders/tree/master/_3_animateShader" target="_blank">my code</a>. We've covered a lot of ground, and yet... this is really just the beginning! 
 
 Now that things are working, it's time to really dive in to shaders and get crafty with patterns and textures. To that end, I've been really enjoying reading through <a href="https://thebookofshaders.com" target="_blank">The Book of Shaders</a> and using the <a href="https://github.com/patriciogonzalezvivo/PixelSpiritDeck">Pixel Spirit Deck</a> for inspiration (still crossing my fingers that they do a re-issue on those cards one day🤞). Maybe these resources can prove helpful for you as well.
 
