--- a/site/content/posts/2017-10-25audio-fft.md
+++ b/site/content/posts/2017-10-25audio-fft.md
@@ -1,7 +1,7 @@
 +++
 date = "2017-10-25T00:00:00Z"
 tags = ["p5js", "data", "dataviz", "audio"]
-title = "Visualizing Sound (pt1): The FFT"
+title = "Visualising Sound (pt1): The FFT"
 type = "posts"
 draft = false
 +++
@@ -124,7 +124,7 @@ So now that you know how to get the data from your audio file, what to do with i
 
 Well... that's up to you! One great place to start is by mapping the frequency range you grabbed onto a basic shape, setting it to something like width or height. Grab another range and add another shape. You can keep adding shapes and frequencies, or adding maps of other things like color or position to the frequencies you already have. From here the possibilities are pretty endless. 
 
-For an example of multiple elements in action, check out one of my first audio-powered visualization patterns. 
+For an example of multiple elements in action, check out one of my first audio-powered visualisation patterns. 
 
 {{< p5_sketch fftpatterns >}}
 
