--- a/site/content/posts/2018-01-01fftthree.md
+++ b/site/content/posts/2018-01-01fftthree.md
@@ -6,11 +6,11 @@ type = "posts"
 draft = false
 +++
 
-Visualizing audio using three.js isn’t all that different than doing it with the p5 library. You use the FFT to analyze and isolate frequencies, which you then use to influence and act on certain aspects of your visuals. Things like shape and size, colour, rotation angle…
+Visualising audio using three.js isn’t all that different than doing it with the p5 library. You use the FFT to analyze and isolate frequencies, which you then use to influence and act on certain aspects of your visuals. Things like shape and size, colour, rotation angle…
 
-#### N.B This is part two of a series on audio visualization. If you want a gentle primer on what the FFT is and how it works with p5.js, jump back to <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/" target="_clear">Part One</a>
+#### N.B This is part two of a series on audio visualisation. If you want a gentle primer on what the FFT is and how it works with p5.js, jump back to <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/" target="_clear">Part One</a>
 
-...So from a theoretical standpoint, we’re not really in new territory here. However, practically speaking, the story is a bit different. To visualize audio with three.js you can use the library’s built in <a href=“https://threejs.org/docs/index.html#api/audio/AudioAnalyser” target="_clear">AudioAnalyser object</a>, but that will only get you so far. It’s not quite as flexible as p5’s <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft" target="_clear">`getEnergy()`</a> in that it only provides you with the average frequency of the sound you’re feeding it. It doesn’t really let you specify any kind of range. This works great for something like an equalizer, but if you want to get more specific you’ll need something that gives you more access under the hood.
+...So from a theoretical standpoint, we’re not really in new territory here. However, practically speaking, the story is a bit different. To visualise audio with three.js you can use the library’s built in <a href=“https://threejs.org/docs/index.html#api/audio/AudioAnalyser” target="_clear">AudioAnalyser object</a>, but that will only get you so far. It’s not quite as flexible as p5’s <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft" target="_clear">`getEnergy()`</a> in that it only provides you with the average frequency of the sound you’re feeding it. It doesn’t really let you specify any kind of range. This works great for something like an equalizer, but if you want to get more specific you’ll need something that gives you more access under the hood.
 
 ### The Web Audio API
 
