--- a/site/content/posts/2018-05-10Shaders-pt3.md
+++ b/site/content/posts/2018-05-10Shaders-pt3.md
@@ -8,7 +8,7 @@ type = "posts"
 
 Using data to power animations is one of the most interesting aspects of programing to me. However, pairing data with raw GLSL can be a bit tricky. Which is why I chose to dive into shader language via Three.js. Shaders alone can't easily handle (if at all) the amount of data and calculations that I'm interested in... which if you're new around here, generally relates to audio/sound.
 
-**N.B This is Part Three of a series on getting started with shaders in Three.js and will specifically cover how to use time and data to animate shaders. This post assumes that you have a working render target set up within your Three.js environment and that you know how to create a basic custom shader. If not, jump back to <a href="https://www.unicornsfartpixels.com/posts/2018-03-15shaders-pt1/">Part One</a> and/or <a href="https://www.unicornsfartpixels.com/posts/2018-04-01shaders-pt2/">Part Two</a> and get things set up. You'll need them both to follow this post.**
+**N.B This is Part Three of a series on getting started with shaders in Three.js and will specifically cover how to use time and data to animate shaders. This post assumes that you have a working render target set up within your Three.js environment and that you know how to create a basic custom shader. If not, jump back to <a href="https://www.unicornsfartpixels.com/posts/2018-03-15shaders-pt1/" target="_blank">Part One</a> and/or <a href="https://www.unicornsfartpixels.com/posts/2018-04-01shaders-pt2/" target="_blank">Part Two</a> and get things set up. You'll need them both to follow this post.**
 
 Before we dive into things, I've compiled a list of a few shader terms and functions that have proved useful as I've embarked on my GLSL journey. You'll find me referring to most if not all of them in the code presented further down the page:
 
